--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,11 @@
                 <h4 id="time-left">25:00</h4>
             </div>
             <div class="timer-controls">
-                <div id="start_stop"><i class="bi bi-play-fill"></i></div>
+                <div id="start_stop" class="bi bi-play-fill"></div>
                 <div id="reset"><i class="bi bi-arrow-repeat"></i></div>
             </div>
         </div>
+        <audio id="beep" preload="auto" src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"></audio>
     </div>
     <script src="./index.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
